public/stylesheets/cruisecontrol.css
body {
  font-family: "Lucida Grande", "Lucida Sans", Verdana, Helvetica, Arial, sans-serif;
  font-size: .8em;
  margin: 0;
  border: 0;
  color: #000;
  background-color: #FFF;
}

h3 {
  margin-top: .4em;
}

img { border-style: none; }

a, a:link, a:visited { 
  color: #507ec0;
  text-decoration: none;
}

a:hover {
  color: #507ec0;
  text-decoration: underline;
}

/* default layout classes */

.header {
  background-image: url(../images/top_gradient.png);
  background-position: top;
  background-repeat: repeat-x;
  font-weight: normal;
  clear: both;
}

.header .cc_logo { 
  margin: 10px 0 0 1.5em;
 
}

.footer {
  font-size: 0.7em;
  color: #999;
  text-align: right;
  padding: 2em 1em 0 0;
  clear: both;
}

.footer .version {
  padding-right: 1.5em;
}

.footer a, .footer a:visited {
  color: #507ec0;
}

.main_menu {
  color: #507ec0;
  padding: 0 1.5em 0 0.5em;
  float: right;
}

.main_menu .menu_item {
  color: #666;
  display: block;
  font-size: 0.8em;
  text-align: right;
  padding: 0 0.35em 0.2em 0;
}

.main_menu .menu_item a, .main_menu .menu_item a:visited {
  color: #507ec0;
}

#content {
  padding-left: 1.5em;
}

.error_message {
  font-weight: bold;
  color: #C00;
}

/* build status stuff */

.build_status { font-weight: bold; }
.build_failed .build_status, .build_never_built .build_status { text-transform: uppercase; }
.build_success .build_status { color: #0A0; }
.build_failed .build_status { color: #C00; }
.build_never_built .build_status { color: #888; }
.build_committed_by { font-weight: bold; }

a.success, a.success:visited {
}

a.failed, a.failed:visited {
  font-weight: bold;
  color: #C00;
}

a.incomplete, a.incomplete:visited {
  font-weight: bold;
  font-style: italic;
  color: #888;
}


a.never_built, a.never_built:visited {
  font-weight: bold;
  color: #888;
}

/* Project dashboard */

.project {
  margin: 0.5em 0;
  padding: 0 1.5em;
  min-height: 9.2em;
}  

.build_success, .build_never_built, .build_incomplete, .build_failed {
  background-position: bottom;
  background-repeat: repeat-x;
  margin-left: -2.5em;
}

.build_never_built, .build_incomplete {
  background-image: url(../images/gray_gradient.png);
}

.build_success {
  background-image: url(../images/gray_gradient.png);
}

.build_failed {
  background-image: url(../images/red_gradient.png);
}

.project table.project_pane {
  padding-left: .75em;
  width: 100%;
}

.project table.project_pane td {
  vertical-align: top;
  text-align: left;
}

.project table.project_pane td.project_summary {
  width: 24%;
}

.project table.project_pane td.builder_control {
  width: 12%;
}

.project table.project_pane td.build_details {
  width: 64%;
}

.project .project_summary .buttons {
  padding: 1.5em;
}

.project .project_summary .buttons form {
  display: inline;
}

.project .build_button, .project .build_button_disabled {
  color: #000;
  font-weight:bold;
  background-repeat: no-repeat;
  font-size: 11px;
  text-align: center;
  width: 110px;
  height: 23px;
  border: none;
  background-color: transparent;
}
.project .build_button {
  background-image:url(../images/button.png);
  cursor: pointer;
}

.project .build_button_disabled {
  color: #999;
  background-image:url(../images/button_disabled.png);
}

.project .recent_builds {
  color: #666;
}

.project .recent_builds .lead {
  float: left;
  padding-right: 0.5em;
}

.project .recent_builds .builds_list {
  float: left;
}

.project .builder_control .builder_status_builder_down, 
.project .builder_control .builder_status_unknown, 
.project .builder_control .builder_status_source_control_error,
.project .builder_control .builder_status_timed_out {
  font-weight: bold;
  padding-top: 5px;
  padding-left: 25px;
  background-image: url(../images/spinner_error.gif);
  background-position: left;
  background-repeat: no-repeat;
}

.project .builder_control .builder_status_building, 
.project .builder_control .builder_status_build_requested,
.project .builder_control .builder_status_queued {
  font-weight: bold;
  padding-top: 5px;
  padding-left: 25px;
  background-image: url(../images/spinner.gif);
  background-position: left;
  background-repeat: no-repeat;
}

.project .build_summary {
}

.project .project_name {
  padding: 0;
  margin: 0;
  font-size: 2em;
  font-weight: normal;
}

/* Other classes */
.warning {
  color: #F28218;
}

.error, .error a, .error a:visited {
  color: #C00;
}

.log {
  overflow: auto;
}

.test-results {
  font-weight: bold;
}

.label {
  font-weight: bold;
  text-align: right;
}

.help {
  padding-left: .7em;
  color: #666;
}

.help a {
  color: #333;
}

.flash_notice {
  border: 1px solid #F87900;
  background-color: #FED;
  color: #F87900;
  padding: 1ex;
}

.build_time {
  margin-top: -1em;
  margin-left: 3em;
}

#build_details {
  margin-left: 14em;
  padding-right: 1.5em;
}

#build_details .section_content {
  padding-left: 2em;
  font-family: courier, monospace;
  word-wrap: break-word;
  white-space: pre;
}

/* section stuff */
#build_details .section_header {
  cursor: pointer;
  font-size: 1.3em;
  padding-left: 1.3em;
  background: no-repeat center left;
  margin: .4em 0;
}

#build_details .section_closed .section_header { background-image: url(../images/arrow_closed.png); }
#build_details .section_open .section_header   { background-image: url(../images/arrow_open.png); }

#build_details .section_closed .section_content { display: none; }

#builds_list {
  width: 16em;
  float: left;
  margin: 0.2em 1em 1em 0;
}

#builds_list .selected a {
  background-color: #507ec0;
  color: #FFF;
}

#builds_list .selected a .error {
  background-color: #507ec0;
  color: #F66;
}

#builds_list .selected a, #builds_list .selected a:visited {
  color: #FFF;
}

.logfile {
  padding-top: 0;
}

.build_link {
  padding: 1px 1px 1px 0;
}

.code {
  padding-left: 1em;
  font-family: courier, monospace;
}

.code a {
  color: black;
}

.code .line_number {
  color: #bbb;
  margin-right: 2em;
  width: 4em;
}

.code .line:hover {
  background-color: #feb;
}

.code .selected_line {
  background-color: #ccf;
}

#navigate_build {
  color: #aaa;
  margin: 1em -5em 1em -1.2em;
}

#navigate_build strong {
  color: black;
  font-weight: normal;
}

